ngo list updated

--- a/PBL-BetterTogether/index.html
+++ b/PBL-BetterTogether/index.html
@@ -106,20 +106,20 @@
         <div class="ngo">
             <div class="name_logo">
                 <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo_logo">
-                <span>
+                <span class="ngo_parameter">
                     Name
                 </span>
             </div>
-            <span>
+            <span class="ngo_parameter">
                 Category
             </span>
-            <span>
+            <span class="ngo_parameter">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur perferendis voluptates perspiciatis laboriosam asperiores hic quisquam pariatur, et, repudiandae est tempora, alias ipsum provident numquam iusto. Hic beatae facilis alias adipisci aliquam pariatur nihil repudiandae sint in ullam, eos perspiciatis. Omnis fuga, esse est rem ad qui tempora fugiat ipsam.
             </span>
-            <span>
+            <span class="ngo_parameter">
                 Location
             </span>
-            <span>
+            <span class="ngo_parameter">
                 Contact
             </span>
         </div>
