ngo registration form to be added

--- a/PBL-BetterTogether/index.html
+++ b/PBL-BetterTogether/index.html
@@ -20,7 +20,6 @@
         <div class="header-section">
             <div class="logo-section">
                 <img src="icons/Site-favicon.webp" alt="logo" class="logo">
-                <p>Hands of Hope</p>
             </div>
             <div class="account-section">
                 <div class="icon"></div>
@@ -30,7 +29,7 @@
         </div>
         </div>
         <div class="search-container">
-            <input type="text" class="search-input" placeholder="Search to give">
+            <input type="text" class="search-input" placeholder="Search">
             <div class="search-button-class">
                 <button type="submit" class="search-button">
                     <img src="icons/search.png" alt="" class="search-img">
@@ -104,35 +103,94 @@
 
     <div class="listing-section">
         <div class="ngo">
-            <div class="name_logo">
-                <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo_logo">
-                <span class="ngo_parameter">
+            <div class="name-logo">
+                <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo-logo">
+                <span class="ngo-parameter">
                     Name
                 </span>
             </div>
-            <span class="ngo_parameter">
+            <span class="ngo-parameter">
                 Category
             </span>
-            <span class="ngo_parameter">
+            <span class="ngo-parameter">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur perferendis voluptates perspiciatis laboriosam asperiores hic quisquam pariatur, et, repudiandae est tempora, alias ipsum provident numquam iusto. Hic beatae facilis alias adipisci aliquam pariatur nihil repudiandae sint in ullam, eos perspiciatis. Omnis fuga, esse est rem ad qui tempora fugiat ipsam.
             </span>
-            <span class="ngo_parameter">
+            <span class="ngo-parameter">
                 Location
             </span>
-            <span class="ngo_parameter">
+            <span class="ngo-parameter">
                 Contact
             </span>
+            <div class="ngo-status" title="active"></div>
         </div>
         <div class="ngo">
-            x
+            <div class="name-logo">
+                <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo-logo">
+                <span class="ngo-parameter">
+                    Name
+                </span>
+            </div>
+            <span class="ngo-parameter">
+                Category
+            </span>
+            <span class="ngo-parameter">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur perferendis voluptates perspiciatis laboriosam asperiores hic quisquam pariatur, et, repudiandae est tempora, alias ipsum provident numquam iusto. Hic beatae facilis alias adipisci aliquam pariatur nihil repudiandae sint in ullam, eos perspiciatis. Omnis fuga, esse est rem ad qui tempora fugiat ipsam.
+            </span>
+            <span class="ngo-parameter">
+                Location
+            </span>
+            <span class="ngo-parameter">
+                Contact
+            </span>
+            <div class="ngo-status" title="active"></div>
         </div>
         <div class="ngo">
-            x
+            <div class="name-logo">
+                <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo-logo">
+                <span class="ngo-parameter">
+                    Name
+                </span>
+            </div>
+            <span class="ngo-parameter">
+                Category
+            </span>
+            <span class="ngo-parameter">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur perferendis voluptates perspiciatis laboriosam asperiores hic quisquam pariatur, et, repudiandae est tempora, alias ipsum provident numquam iusto. Hic beatae facilis alias adipisci aliquam pariatur nihil repudiandae sint in ullam, eos perspiciatis. Omnis fuga, esse est rem ad qui tempora fugiat ipsam.
+            </span>
+            <span class="ngo-parameter">
+                Location
+            </span>
+            <span class="ngo-parameter">
+                Contact
+            </span>
+            <div class="ngo-status" title="active"></div>
         </div>
         <div class="ngo">
-            x
+            <div class="name-logo">
+                <img src="image/eliteclub.jpg" alt="ngo_logo" class="ngo-logo">
+                <span class="ngo-parameter">
+                    Name
+                </span>
+            </div>
+            <span class="ngo-parameter">
+                Category
+            </span>
+            <span class="ngo-parameter">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur perferendis voluptates perspiciatis laboriosam asperiores hic quisquam pariatur, et, repudiandae est tempora, alias ipsum provident numquam iusto. Hic beatae facilis alias adipisci aliquam pariatur nihil repudiandae sint in ullam, eos perspiciatis. Omnis fuga, esse est rem ad qui tempora fugiat ipsam.
+            </span>
+            <span class="ngo-parameter">
+                Location
+            </span>
+            <span class="ngo-parameter">
+                Contact
+            </span>
+            <div class="ngo-status" title="active"></div>
         </div>
     </div>
+
+    <footer>
+        xyz3
+    </footer>
 </body>
 
 </html>
