--- a/PBL-BetterTogether/index.html
+++ b/PBL-BetterTogether/index.html
@@ -187,7 +187,44 @@
     </div>
 
     <footer>
-        xyz3
+        <div style="font-size: 28px; font-weight: normal;">
+                    Hands of Hope
+                </div>
+                <div class="company">
+                    <h1 style="font-size: 21px; font-weight: 500;">
+                        Company
+                    </h1>
+                    <a class="anchor-tag" href="">
+                        About us
+                    </a>
+                    <a class="anchor-tag" href="">
+                        News
+                    </a>
+                    <a class="anchor-tag" href="">
+                        Blog
+                    </a>
+                    <a class="anchor-tag" href="">
+                        Gift cards
+                    </a>
+                </div>
+
+                <div class="social-media">
+                    <div class="social-media-icon">
+                        <img style="width: 100%;" src="image/facebook.png">
+                    </div>
+                    <div class="social-media-icon">
+                        <img style="width: 100%;" src="image/twitter.png">
+                    </div>
+                    <div class="social-media-icon">
+                        <img style="width: 128%;" src="image/youtube.png">
+                    </div>
+                    <div class="social-media-icon">
+                        <img style="width: 108%;" src="image/instagram.png">
+                    </div>
+                    <div class="social-media-icon">
+                        <img style="width: 80%;" src="image/linkedin.png">
+                    </div>
+                </div>
     </footer>
 </body>
 
